fix: wrong font

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -70,7 +70,7 @@
 @layer base {
 	@font-face {
 		font-family: 'iosevka-etoile';
-		src: url('/fonts/IosevkaEtoile-Regular.ttc') format('collection');
+		src: url('/fonts/IosevkaEtoile-Regular.woff2') format('woff2');
 		font-display: swap;
 	}
 
@@ -89,8 +89,6 @@
 	html {
 		-webkit-tap-highlight-color: rgba(128, 128, 128, 0.5);
 	}
-
-	/* Font face Geist font */
 
 	/* === Scrollbars === */
 
